src/top-bar.css
body {
    --top-bar-height: 32px;
    --custom-app-top-bar-height: var(--top-bar-height);
}

.refresh-title-bar-small {
    --custom-app-top-bar-height: var(--top-bar-height);
}

@property --top-bar-button-position {
    syntax: 'off | hide | serverlist | titlebar';
    inherits: false;
    initial-value: titlebar;
}

.platform-osx .wrapper_ef3116 {
    margin-top: max(0px, calc(36px - var(--top-bar-height)));
}

@container body style(--top-bar-button-position: hide) {
    .trailing_c38106 > a[href='https://support.discord.com'],
    .recentsIcon_c99c29,
    .winButtons_c38106::before {
        display: none;
    }
}

@container body style(--top-bar-button-position: serverlist) {
    /* remove help button */
    .trailing_c38106 > a[href='https://support.discord.com'],
    .winButtons_c38106::before {
        display: none;
    }

    /* make server list inner scroll */
    .stack_dbd263:not([id='guild-list-unread-dms']) {
        overflow: hidden scroll;
        scrollbar-width: none;
    }
    /* create space for inbox button */
    .tutorialContainer__1f388 {
        margin-bottom: 48px;
    }
    /* move inbox button */
    .recentsIcon_c99c29 {
        position: fixed;
        width: 40px;
        height: 40px;
        top: calc(var(--custom-app-top-bar-height) + 1px + var(--custom-guild-list-padding) + 48px);
        left: calc(var(--gap) + 1px + var(--custom-guild-list-padding));
    }
    /* style inbox button */
    .recentsIcon_c99c29 .button__85643 {
        width: 100%;
        height: 100%;
        background-color: var(--background-surface-higher);
        border-radius: var(--radius-md);
        transition: background-color 0.15s ease-out;

        &:hover {
            background-color: var(--bg-brand);

            .icon__9293f {
                color: var(--white);
            }
        }
    }
    .recentsIcon_c99c29 .svg__2338f {
        transition: color 0.15s ease-out;
        width: 24px;
        height: 24px;
    }
    /* shift inbox popup panel into view */
    .recentMentionsPopout__95796 {
        transform: translateX(100%);
    }
    /* fix settings animation transform */
    .layer__960e4.baseLayer__960e4 {
        transform: none !important;
    }
    .layers__960e4 > .layer__960e4.animating__960e4 {
        will-change: opacity;
    }

    /* unread icon */
    .recentsIcon_c99c29 .iconBadge__9293f {
        --custom-icon-offset: 8px;
        width: 10px;
        height: 10px;
        transition: background 0.15s ease-out;
    }

    .recentsIcon_c99c29:hover .iconBadge__9293f {
        background: var(--white);
    }
}

@container body style(--top-bar-button-position: titlebar) {
    #app-mount {
        --custom-channel-header-height: calc(var(--guildbar-avatar-size) + var(--space-xs) + var(--border-thickness) * 2);
        /* --top-bar-right-margin: calc(32px + var(--space-xs)); */
    }
    .title_c38106,
    .trailing_c38106 > a[href='https://support.discord.com'] {
        display: none;
    }
    .trailing_c38106 {
        position: absolute;
        top: calc(var(--top-bar-height) + 8px + var(--border-thickness));
        right: calc(var(--gap) + var(--border-thickness));
        gap: var(--space-xs);
        z-index: 1100;
        padding-right: var(--space-xs);
        height: 32px;
    }
    /* Fix window controls overlapping the settings menu */
    .modal_e44912 {
        --custom-viewport-padding: calc(var(--space-40) + var(--custom-app-top-bar-height));
    }
    /* Move window controls when mod view is open */
    :has(.guildSidebar_f75fb0) .trailing_c38106 {
        right: calc(var(--gap) + var(--border-thickness) + 480px);
    }
    .winButtons_c38106 {
        padding: 0;
    }
    .winButton_c38106 {
        height: calc(var(--window-control-size) * 2);
    }
    .winButtons_c38106::before {
        height: 16px;
        width: var(--space-xs);
        box-sizing: border-box;
        margin: 0;
    }
    .toolbar__9293f {
        padding-right: var(--top-bar-right-margin);
    }
    /* Remove unused space when thread is open */
    :has(.chatLayerWrapper__01ae2) .chat_f75fb0.threadSidebarOpen_f75fb0 .toolbar__9293f {
        padding-right: 0;
    }
    .navBarContent__131a1,
    .headerBarContent__1a9ce {
        padding-right: var(--top-bar-right-margin);
    }
    .headerBar__8a7fc {
        padding-right: calc(var(--top-bar-right-margin) + var(--space-sm));
    }
    .searchFloating__1ac1c {
        right: calc(var(--top-bar-right-margin) + var(--space-sm));
    }
    .balanceWidgetMenu__80679 {
        margin-right: var(--top-bar-right-margin);
    }
    .inviteToolbar__133bf {
        padding-right: 0;
    }
    .chat_f75fb0 > .layerContainer__59d0d {
        z-index: 999;
    }
    .subtitleContainer_f75fb0 {
        height: var(--custom-channel-header-height);
    }
    .title_f75fb0.container__9293f {
        min-height: 0;
        height: auto;
    }
    .followButton_f75fb0 {
        padding-top: 0;
        padding-bottom: 0;
    }
    .base__5e434:has(.notice__6e2b9) > .bar_c38106 > .trailing_c38106 {
        top: calc(var(--top-bar-height) + 8px + 40px + var(--gap) + var(--border-thickness));
    }
    
    /* Fix header icon overlap */
    .base__5e434 {
        /* Supports up to 6 buttons */
        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(1)) { --button-count: 1; }
        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(2)) { --button-count: 2; }
        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(3)) { --button-count: 3; }
        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(4)) { --button-count: 4; }
        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(5)) { --button-count: 5; }
        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(6)) { --button-count: 6; }
        
        &:has(.winButtons_c38106) {
            --top-bar-right-margin: calc(32px * var(--button-count) + (var(--button-count) + 2) * var(--space-xs) + 6 * var(--window-control-size) + 1px + var(--window-controls-padding)) !important;
        }

        /* Revert icon sizing changes */
        .trailing_c38106 {
            > div:not(.winButtons_c38106),
            div.clickable__81391 {
                width: 32px !important;
                height: 32px !important;
                display: flex;
                justify-content: center;
                align-items: center;

                svg {
                    width: 20px;
                    height: 20px;
                }
            }
        }
    }
    /* Mac / Vesktop users */
    .base__5e434 {
        --top-bar-right-margin: calc(32px * var(--button-count) + var(--button-count) * var(--space-xs));
    }
    /* VC popout */
    .popout__0bd4a:not(:has(.fullScreen_cb9592)) {
        --top-bar-right-margin: calc((var(--window-control-size) * 6) + var(--window-controls-padding) + var(--space-xs));
    }

    /* Hide page seek arrows */
    .bar_c38106 .backForwardButtons__63abb {
        display: none;
    }
    /* .base__5e434:has(.trailing_c38106 > .button__85643) {
        --top-bar-right-margin: calc(32px * 2 + 2 * var(--space-xs));
    } */
    /* .base__5e434:has(.winButtons_c38106) {
        --top-bar-right-margin: calc(32px + 3 * var(--space-xs) + 6 * var(--window-control-size) + 1px);
    } */
    /* .base__5e434:has(.winButtons_c38106):has(.trailing_c38106 > .button__85643) {
        --top-bar-right-margin: calc(32px * 2 + 5 * var(--space-xs) + 6 * var(--window-control-size) + 1px);
    } */
    /* .base__5e434:has(.trailing_c38106 > .button__85643:nth-of-type(3)) {
        --top-bar-right-margin: calc(32px * 3 + 3 * var(--space-xs));
    }
    .base__5e434:has(.winButtons_c38106) {
        --top-bar-right-margin: calc(32px * 2 + 5 * var(--space-xs) + 6 * var(--window-control-size) + 1px);
    }
    .base__5e434:has(.winButtons_c38106):has(.trailing_c38106 > .button__85643:nth-of-type(3)) {
        --top-bar-right-margin: calc(32px * 3 + 6 * var(--space-xs) + 6 * var(--window-control-size) + 1px);
    } */
}

@property --top-bar-title-position {
    syntax: 'off | hide | left';
    inherits: false;
    initial-value: off;
}

@container body style(--top-bar-title-position: hide) {
    .title_edbb22 {
        display: none;
    }
}

@container body style(--top-bar-title-position: left) {
    .title_c38106 {
        padding-left: var(--gap);
        justify-content: flex-start;
    }
    .title_edbb22 {
        gap: 4px;
    }
    /* Hide page seek arrows */
    .bar_c38106 .backForwardButtons__63abb {
        display: none;
    }
}

@property --subtle-top-bar-title {
    syntax: 'off | on';
    inherits: false;
    initial-value: off;
}

@container body style(--subtle-top-bar-title: on) {
    .title_edbb22 .icon_f34534,
    .title_edbb22 > svg {
        display: none;
    }
    .title_edbb22 .text-sm\/medium_cf4812 {
        line-height: 90%;
        font-weight: 700;
        color: var(--text-muted);
    }
}

